add an email address field to the User

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,11 @@
   <b>Username:</b>
   <%= @user.username %>
 </p>
+<p>
+  <b>Email address:</b>
+  <%= @user.email %>
+</p>
+
 
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
