--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :username %><br />
     <%= f.text_field :username %>
   </div>
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.text_field :email %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
